# PyRedactKit

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  arg_parse_files.py  custom.json  dev-requirements.txt  pyproject.toml  pyredactkit.py  redact.json  redacted_test.txt  requirements.txt  setup.py  sonar-project.properties  test.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: cd.yml  ci.yml  deploy.yml  python-app.yml
adhocscripts/: file_handling.py  hash_poc.py
docs/source/: index.rst
images/: PyRedactKitDesign.drawio
logdata/: attempts.json
pyredactkit/: __init__.py  __main__.py  common_jobs.py  core_redactor.py  custom_redactor.py  identifiers.py  pyredactkit.py  redact.py  runner.py  unredact.py
src/: __init__.py  __main__.py  commonregex.py  identifiers.py  pyredactkit.py  redact.py  unredact.py
test/: file_handling.py  hash_test.py  hashmap.txt  hashtest.txt  test.txt  test_redact.py  test_unredact.py  unredact.py
test_redact/: redacted_test.txt
tests/: test_common_jobs.py  test_core_redact.py  test_custom_redact_engine.py  test_pyredactkit.py  test_redact.py  test_runner.py
tests/unit/: test_redact.py
to_redact/: ip_test1.txt
tools/: install_nltk_popular.py
