[tool.poetry]
name = "pyredactkit"
version = "0.2.5"
description = "Python cli tool to redact sensitive data"
authors = ["brootware <brootware@outlook.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/brootware/PyRedactKit"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Text Processing :: General",
    "Topic :: Internet :: Log Analysis",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.7"
numpy = "<1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
regex = "^2022.6.2"
attrs = "^21.4.0"
click = ">=8.1.3"
iniconfig = "^1.1.1"
joblib = "^1.1.0"
packaging = "^21.3"
pluggy = "^1.0.0"
py = "^1.11.0"
pyparsing = "^3.0.8"
tomli = "^2.0.1"
tqdm = "^4.64.0"
nltk = "^3.7"
numpy = "<1.22.0"
rich = "^12.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyredactkit = "pyredactkit.pyredactkit:main"
pyredactor = "pyredactkit.pyredactkit:main"