[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyredactkit"
version = "1.0.2"
description = "Python cli tool to redact sensitive data"
authors = ["brootware <brootware@outlook.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/brootware/PyRedactKit"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Text Processing :: General",
    "Topic :: Internet :: Log Analysis",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
regex = "^2022.4.24"
attrs = "^21.4.0"
click = ">=8.1.3"
iniconfig = "^1.1.1"
joblib = "^1.1.0"
packaging = "^21.3"
pluggy = "^1.0.0"
py = "^1.11.0"
pyparsing = "^3.0.8"
tomli = "^2.0.1"
tqdm = "^4.64.0"
rich = "^12.4.0"
mypy = "^0.961"
flake8 = "^4.0.1"
tox = "^3.25.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[tool.poetry.scripts]
pyredactkit = "pyredactkit.runner:main"
prk = "pyredactkit.runner:main"

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rfEX -p pytester --strict-markers"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
python_classes = ["Test", "Acceptance"]
python_functions = ["test"]

[tool.mypy]
mypy_path = "pyredactkit"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
